--- a/HeartsSystem/nbproject/private/private.properties
+++ b/HeartsSystem/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\J.Appallonia\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
+user.properties.file=C:\\Users\\CUZ126\\AppData\\Roaming\\NetBeans\\8.0.2\\build.properties
